@@ -1,3 +1,12 @@
+Fri Feb 13 15:11:11 2009  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_eval.c (eval_string_with_cref): use rb_vm_get_ruby_level_next_cfp() 
+	  instead of vm_get_ruby_level_caller_cfp().  checking a upper frame
+	  is not enough.  [ruby-dev:37984]
+
+	* proc.c, vm_core.h: declare rb_vm_get_ruby_level_next_cfp()
+	  on vm_core.h.
+
 Fri Feb 13 15:01:40 2009  Koichi Sasada  <ko1@atdot.net>
 
 	* cont.c (rb_fiber_alive_p): fix to return true instead of 1.
